# quip

./: .gitignore  Cargo.toml  README.md  SPEC.md  TODO.md  e2e.quip  example.quip  mprocs.yaml
.zed/: settings.json
quip-cli/: Cargo.toml
quip-cli/src/: main.rs
quip-core/: Cargo.toml
quip-core/src/: ast.rs  context.rs  intrinsic.rs  lib.rs  run.rs
quip-kernel/: Cargo.toml
quip-kernel/src/: handlers.rs  lib.rs  main.rs
quip-notebook/: Cargo.toml
quip-notebook/src/: lib.rs  main.rs
spec/arithmetic/add/: negative_saturation.quip  negatives.quip  positive_saturation.quip
spec/arithmetic/sub/: negative_saturation.quip  negatives.quip  positive_saturation.quip
src/: ast.rs  context.rs  intrinsic.rs  lexer.rs  lib.rs  main.rs  run.rs
src/kernel/: connection.rs  handlers.rs  message.rs  server.rs  sockets.rs
tests/: kernel_e2e.rs  lazy-eval.quip
