[package]
name = "quip-kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name ="quip-kernel"
path = "src/main.rs"

[dependencies]
quip-core.path = "../quip-core"

thiserror.workspace = true

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hmac = "0.13.0"
chrono = "0.4.44"
sha2 = "0.11.0"
uuid = "1.23.1"
bytes = "1.11.1"
tokio = { version = "1.52.1", features = ["full"] }
zeromq = "0.5.0"
hex = "0.4.3"
