[package]
name = "quip-notebook"
version = "0.1.0"
edition = "2024"

[[bin]]
name ="quip-notebook"
path = "src/main.rs"

[[bin]]
name ="quip-kernel"
path = "src/bin/kernel.rs"

[dependencies]
quip-core.path = "../quip-core"

eframe = "0.34.1"
egui_code_editor = "0.2.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
